--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
 	"license": "MIT",
 	"dependencies": {
   	"redis": "1.x",
-  	"pomelo-logger": "dbrugne/pomelo-logger"
+  	"pomelo-logger": "latest"
 	}
 }
